# feature_catalog

./: .gitignore  .pre-commit-config.yaml  LogicalFeatureStore.ipynb  README.md  example_usage.ipynb  pyproject.toml
docs/: README.md  feature_catalog_architecture.dsl  feature_store_architecture.dsl
docs/images/: feature_catalog.excalidraw  feature_group_dependencies.gv
scripts/: feature_group_dependencies.py
src/feature_catalog/: base_feature_group.py  main.py  utils.py
src/feature_catalog/feature_groups/: zone.py  zone_likelyhood.py
src/feature_logic/: base_feature_group.py  feature.py  feature_group.py  main.py  utils.py
src/feature_logic/feature_groups/: test_group.py  zone.py  zone_likelyhood.py
tests/: conftest.py  test_base_feature_group.py  test_main.py
tests/feature_groups/: test_test_group.py  test_zone.py  test_zone_likelyhood.py
