[tool.poetry]
name = "feature-logic"
version = "0.1.0"
description = "A package to define and access features with a simple API"
authors = []
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
pyspark = "^3.3.0"
pandas = "^1.5.1"
pyspark-test = "^0.2.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.4.8"
pre-commit = "^2.20.0"
black = "^22.10.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
